--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@chakra-ui/react": "^2.2.4",
     "@emotion/react": "11",
     "@emotion/styled": "11",
+    "@fontsource/nunito": "^4.5.9",
+    "@fontsource/open-sans": "^4.5.10",
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
